__HEADER__([[[Octave-Forge News Archive]]])

<div class="section">
<p>This is an abbreviated list of the changes that were introduced in
various versions of octave-forge. For a full list of changes please
see the <a href="ChangeLog">ChangeLog</a>.</p>
</div>
<div class="section">
<dl>
<dt>October 16, 2007</dt>
<dd>Updated Windows installer to Octave 2.9.15.
</dd>
<dt>October 14, 2007</dt>
<dd>Updated the OS X binary release to use Octave 2.9.15.
</dd>
<dt>October 14, 2007</dt>
<dd>
<p>Release of Octave-forge tested against Octave 2.9.15. Many packages
 will also function function with earlier versions of Octave 2.9.
 Notable changes in this release include:</p>
<ul>
   <li>jhandles: Significant improvement in the GUI functions and
   graphics handles compatibility, including stemseries, barseries,
   GUI callbacks, postscript output, etc.</li>
   <li>java: Allow for waitfor functions in Octave. Use dlopen/dlsym
   rather than symbolic linking to the JVM in linux and OS X
   platforms.</li>
   <li>signal: New functions welchwin, blackmannutall, shanwavf, mexihat
   meyeraux and morlet. Bug fix in specgram for window with an odd
   number of elements.</li>
   <li>info-theory: New functions condentr_seq, hartley_entropy,
   infoentr_seq, infogain_seq, kullback_leibler_distance,
   mutualinfo_seq, narysource, renyi_entropy and shannon_entropy.</li>
   <li>comm: New function ammod, amdemod, fmmod, fmdemod, systematize, 
   reedmullergen, reedmullerenc, reedmullerdec, egolaydec, egolayenc
   and egolaygen.</li>
   <li>geometry: Remove the geometry package that is migrate dto the
   Octave core.</li>
   <li>polynomial: Remove polyint function, migrated to the Octave core.</li>
   <li>statistics: Aligned function names and arguments for matlab
   compatibility, removing the function pascal_stat and weibstat and
   replacing them with nbinstat and wblstat.</li>
   <li>arpack: Bug fix to allow non convergence to be correctly flagged.</li>